# SetgApp

stegapp/: .gitignore  Makefile  README.md
stegapp/backend/: api.py  requirements.txt
stegapp/backend/config/: pyproject.toml
stegapp/backend/stego/: __init__.py  audio.py  audio_alt.py  image.py  pdf_meta.py  pdf_meta_alt.py  pdf_meta_simple.py  utils.py
stegapp/backend/tests/: __init__.py  debug_metadata.py  debug_pdf.py  quick_test.py  test_api_pdf.py  test_audio.py  test_audio_fix.py  test_fix.py  test_image.py  test_pdf.py  test_subject_fix.py  test_utils.py
stegapp/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml  nginx.conf
stegapp/docs/: README.md
stegapp/frontend/: app.js  index.html  styles.css
